--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,23 @@
-version: '3'
+version: "3"
 services:
 
   web:
     build: .
     ports:
-     - "8081:8081"
+      - "8081:8081"
     volumes:
-    - .:/code
+      - .:/code
+    depends_on:
+      - postgres
+
+  postgres:
+    image: postgres:alpine
+    restart: always
+    env_file: .env
+    volumes:
+      - ./postgres-data/postgres:/var/lib/postgresql/data
+    expose:
+      - 5432
 
   redis:
-    image: "redis:alpine"
+    image: redis:alpine
